@@ -6,101 +6,98 @@ import com.blps.repository.MovieRepository;
 
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
+@RequiredArgsConstructor
 public class MovieService {
 
     private final MovieRepository movieRepository;
 
-    public MovieService(MovieRepository movieRepository) {
-        this.movieRepository = movieRepository;
-    }
-
     public Movie createMovie(Movie movie) throws SQLException {
-        System.out.println("Service: Creating movie - " + movie.getName());
+        log.info("Creating movie - {}", movie.getName());
         return movieRepository.create(movie);
     }
 
     public Movie getMovieById(Long id) throws SQLException {
-        System.out.println("Service: Getting movie by ID - " + id);
+        log.info("Getting movie by ID - {}", id);
         return movieRepository.getById(id);
     }
 
     public List<Movie> getMovies(String name, MovieGenre genre, String sort, int page, int size) throws SQLException {
-        System.out.println("Service: Getting movies with filters - name: " + name + ", genre: " + genre + ", sort: " + sort + ", page: " + page + ", size: " + size);
-
+        log.info("Getting movies with filters - name: {}, genre: {}, sort: {}, page: {}, size: {}",
+                name, genre, sort, page, size);
         return movieRepository.getAll(name, genre, sort, page, size);
     }
 
     public Movie updateMovie(Long id, Movie partialMovie) throws SQLException {
-        System.out.println("Service: Updating movie with ID - " + id);
+        log.info("Updating movie with ID - {}", id);
+
         Movie existing = movieRepository.getById(id);
         if (existing == null) {
-            System.out.println("Service: Movie not found for update");
+            log.warn("Movie with ID {} not found for update", id);
             return null;
         }
 
-        if (partialMovie.getName() != null) {
-            existing.setName(partialMovie.getName());
-        }
-        if (partialMovie.getCoordinates() != null) {
-            existing.setCoordinates(partialMovie.getCoordinates());
-        }
-        if (partialMovie.getOscarsCount() != null) {
-            existing.setOscarsCount(partialMovie.getOscarsCount());
-        }
-        if (partialMovie.getGoldenPalmCount() != null) {
-            existing.setGoldenPalmCount(partialMovie.getGoldenPalmCount());
-        }
-        if (partialMovie.getBudget() != null) {
-            existing.setBudget(partialMovie.getBudget());
-        }
-        if (partialMovie.getGenre() != null) {
-            existing.setGenre(partialMovie.getGenre());
-        }
-        if (partialMovie.getScreenwriter() != null) {
-            existing.setScreenwriter(partialMovie.getScreenwriter());
-        }
+        mergeMovie(existing, partialMovie);
 
-        System.out.println("Service: Movie updated successfully");
+        log.info("Movie with ID {} updated successfully", id);
         return movieRepository.update(existing);
     }
 
     public boolean deleteMovie(Long id) throws SQLException {
-        System.out.println("Service: Deleting movie with ID - " + id);
+        log.info("Deleting movie with ID - {}", id);
         return movieRepository.deleteById(id);
     }
 
     public boolean deleteMoviesByOscarsCount(int count) throws SQLException {
-        System.out.println("Service: Deleting movies with oscars count - " + count);
-        List<Movie> all = movieRepository.getAll();
-        boolean anyDeleted = false;
-        for (Movie m : all) {
-            if (m.getOscarsCount() != null && m.getOscarsCount() == count) {
+        log.info("Deleting movies with oscars count - {}", count);
+
+        List<Movie> moviesToDelete = movieRepository.getAll().stream()
+                .filter(m -> m.getOscarsCount() != null && m.getOscarsCount() == count)
+                .toList();
+
+        moviesToDelete.forEach(m -> {
+            try {
                 movieRepository.deleteById(m.getId());
-                anyDeleted = true;
+            } catch (SQLException e) {
+                log.error("Failed to delete movie with ID {}", m.getId(), e);
             }
-        }
-        System.out.println("Service: Deleted movies with oscars count " + count + ": " + anyDeleted);
+        });
+
+        boolean anyDeleted = !moviesToDelete.isEmpty();
+        log.info("Deleted movies with oscars count {}: {}", count, anyDeleted);
         return anyDeleted;
     }
 
+
     public long countMoviesWithOscarsLessThan(int count) throws SQLException {
-        System.out.println("Service: Counting movies with oscars less than - " + count);
+        log.info("Counting movies with oscars less than - {}", count);
         long result = movieRepository.getAll().stream()
                 .filter(m -> m.getOscarsCount() != null && m.getOscarsCount() < count)
                 .count();
-        System.out.println("Service: Found " + result + " movies with oscars less than " + count);
+        log.info("Found {} movies with oscars less than {}", result, count);
         return result;
     }
 
     public List<Movie> getMoviesByNamePrefix(String prefix) throws SQLException {
-        System.out.println("Service: Getting movies with name prefix - " + prefix);
+        log.info("Getting movies with name prefix - {}", prefix);
         List<Movie> result = movieRepository.getAll().stream()
                 .filter(m -> m.getName() != null && m.getName().startsWith(prefix))
-                .collect(Collectors.toList());
-        System.out.println("Service: Found " + result.size() + " movies with prefix " + prefix);
+                .toList();
+        log.info("Found {} movies with prefix {}", result.size(), prefix);
         return result;
     }
 
+    private void mergeMovie(Movie existing, Movie partial) {
+        if (partial.getName() != null) existing.setName(partial.getName());
+        if (partial.getCoordinates() != null) existing.setCoordinates(partial.getCoordinates());
+        if (partial.getOscarsCount() != null) existing.setOscarsCount(partial.getOscarsCount());
+        if (partial.getGoldenPalmCount() != null) existing.setGoldenPalmCount(partial.getGoldenPalmCount());
+        if (partial.getBudget() != null) existing.setBudget(partial.getBudget());
+        if (partial.getGenre() != null) existing.setGenre(partial.getGenre());
+        if (partial.getScreenwriter() != null) existing.setScreenwriter(partial.getScreenwriter());
+    }
 }
